# opensim-libs

./: README.txt
DotNetOpenId/samples/: DotNetOpenId.Samples.sln
DotNetOpenId/src/: DotNetOpenId.sln
DotNetOpenId/tools/: Documentation.targets  DotNetOpenId.BuildTasks.targets  DotNetOpenId.Versioning.targets  sandcastle.targets
DotNetOpenMail-0.5.8b/: DotNetOpenMail.sln  UpgradeLog.htm
DotNetOpenMail-0.5.8b/DotNetOpenMail/: DotNetOpenMail.csproj  DotNetOpenMail.xml
DotNetOpenMail-0.5.8b/DotNetOpenMailTests/: DotNetOpenMailTests.csproj
DotNetZip/BZip2/: BZip2 DLL.csproj
DotNetZip/BZip2 SL DLL/: BZip2 SL DLL.csproj
DotNetZip/Zip/: Zip DLL.csproj  ZipEntry.Extract.cs
DotNetZip/Zip Reduced/: Zip Reduced.csproj
DotNetZip/Zip SL/: Zip SL.csproj
DotNetZip/Zip Tests/: Zip Tests.csproj
DotNetZip/Zlib/: Zlib DLL.csproj
DotNetZip/Zlib SL DLL/: Zlib SL DLL.csproj
HttpServer/: LGPL2.1.txt
HttpServer/trunk/: HttpServer.sln  UpgradeLog.XML
LibOMV_2243/libomv/: LICENSE.txt  OpenMetaverse.build  OpenMetaverse.sln  README.txt  compile.bat
LibOMV_2359/: OpenMetaverse.build  OpenMetaverse.mds  OpenMetaverse.sln
LibOMV_2359/ExtensionLoader/: ExtensionLoader.cs  ExtensionLoader.csproj  ExtensionLoader.mdp  IExtension.cs
LibOMV_2359/OpenMetaverse/: OpenMetaverse.csproj  OpenMetaverse.dll.build  OpenMetaverse.mdp
LibOMV_2359/OpenMetaverse.GUI/: OpenMetaverse.GUI.csproj
LibOMV_2359/OpenMetaverse.Rendering.Meshmerizer/: OpenMetaverse.Rendering.Meshmerizer.csproj
LibOMV_2359/OpenMetaverse.Rendering.Simple/: OpenMetaverse.Rendering.Simple.csproj  OpenMetaverse.Rendering.Simple.dll.build
LibOMV_2359/OpenMetaverse.Tests/: OpenMetaverse.Tests.csproj  OpenMetaverse.Tests.dll.build  OpenMetaverse.Tests.mdp
LibOMV_2359/OpenMetaverse.Utilities/: OpenMetaverse.Utilities.csproj  OpenMetaverse.Utilities.dll.build  OpenMetaverse.Utilities.mdp
LibOMV_2362/: OpenMetaverse.build  OpenMetaverse.mds  OpenMetaverse.sln
LibOMV_2362/ExtensionLoader/: ExtensionLoader.dll.build
LibOMV_2362/OpenMetaverse/: OpenMetaverse.csproj  OpenMetaverse.dll.build  OpenMetaverse.mdp
LibOMV_2362/OpenMetaverse.GUI/: OpenMetaverse.GUI.csproj  OpenMetaverse.GUI.dll.build
LibOMV_2362/OpenMetaverse.Rendering.Meshmerizer/: OpenMetaverse.Rendering.Meshmerizer.csproj  OpenMetaverse.Rendering.Meshmerizer.dll.build
LibOMV_2362/OpenMetaverse.Rendering.Simple/: OpenMetaverse.Rendering.Simple.csproj
LibOMV_2362/OpenMetaverse.StructuredData/: OpenMetaverse.StructuredData.csproj  OpenMetaverse.StructuredData.dll.build
LibOMV_2362/OpenMetaverse.Tests/: OpenMetaverse.Tests.csproj  OpenMetaverse.Tests.dll.build  OpenMetaverse.Tests.mdp
LibOMV_2362/OpenMetaverse.Utilities/: OpenMetaverse.Utilities.csproj  OpenMetaverse.Utilities.dll.build
LibOMV_2566/HttpServer/: HttpClientContextImp.cs  HttpListener.cs  HttpListenerBase.cs
LibOMV_2568/HttpServer/: HttpHelper.cs
LibOMV_2568/OpenMetaverse/: Helpers.cs
SvnDotNet/SvnDotNet/: AllTests.nunit  Conversions.cs  Entry.cs  Lock.cs  NodeKind.cs  README.txt  Revision.cs  Schedule.cs  Status.cs  StatusEventArgs.cs  StatusKind.cs  StatusReceiver.cs  SubversionClient.cs  SvnDotNet.csproj  SvnDotNet.sln  UpgradeLog.XML  default.build  default.build.user.tmpl
bulletTrunk/msvc/: appAllBulletDemos.rc  appBenchmarks.rc  appDoublePrecisionDemo.rc  appEPAPenDepthDemo.rc  appHeightFieldFluidDemo.rc  appMovingConcaveDemo.rc  appMultiThreadedDemo.rc  appSliderConstraintDemo.rc  appSoftBodyDemo.rc  appTerrainDemo.rc  appUserCollisionAlgorithm.rc
libOMV_2197/libomv/: LICENSE.txt  OpenMetaverse.sln
libomv-0.7.0/: runprebuild2008.bat
libomv-0.7.0/HttpServer/: HttpClientContextImp.cs  HttpHelper.cs  HttpRequest.cs  HttpRequestSignature.cs  IHttpResponse.cs  ReaderWriterLockSlim.cs
libomv-0.7.0/OpenMetaverse.GUI/: AvatarList.cs  FriendList.cs  GroupList.cs  InventoryTree.cs  MessageBar.cs  MiniMap.cs  StatusOutput.cs
libomv-0.7.0/OpenMetaverse.Http/: CapsBase.cs  Trusted.cs  (+3 more)
libsecondlife-0.6.0/: prebuild.xml
libsl1550/: libsecondlife.build
libsl1550-patches/: Update_packets_.cs-to-latest-and-add-DataBlockEstended.patch  change-asset-type-Primitive-enum-to-Object.patch.README  disable-_Packet_.cs-generation-to-work-around-mapgenerator-bug.patch  disable-_Packet_.cs-generation-to-work-around-mapgenerator-bug.txt  mjm_quaternion_getbytes_patch.diff
nhibernate-1.2.1-patches/: Makefile  sqlite-driver-mono-1.2.x.patch
sqlite/: README.txt
trunk/: README.txt
trunk/unmanaged/ODE-OpenSim-Test/: Makefile.am  OPENSIM-README.txt  bootstrap  configure.ac
trunk/unmanaged/ODE-OpenSim-Test/OPCODE/: OPC_TriTriOverlap.h
trunk/unmanaged/ODE-OpenSim-Test/OPCODE/Ice/: IceFPU.h  IceHPoint.cpp  IceHPoint.h  IceMatrix3x3.cpp  IceMatrix3x3.h  IceMatrix4x4.cpp  IceMatrix4x4.h  IceOBB.cpp  IcePoint.cpp  IcePoint.h
trunk/unmanaged/ODE-OpenSim-Test/include/ode/: Makefile.am  collision.h  common.h  ode.h  odemath.h  version.h
trunk/unmanaged/ODE-OpenSim-Test/ode/: Makefile.am
trunk/unmanaged/ODE-OpenSim-Test/ode/src/: Makefile.am  box.cpp  capsule.cpp  collision_cylinder_box.cpp  collision_cylinder_plane.cpp  collision_cylinder_sphere.cpp  collision_cylinder_trimesh.cpp  collision_kernel.cpp  collision_kernel.h  collision_quadtreespace.cpp  collision_sapspace.cpp  collision_space.cpp  collision_space_internal.h  collision_std.h  collision_transform.cpp  collision_trimesh_box.cpp  collision_trimesh_ccylinder.cpp  collision_trimesh_distance.cpp  collision_trimesh_internal.h  collision_trimesh_opcode.cpp  collision_trimesh_plane.cpp  collision_trimesh_ray.cpp  collision_trimesh_sphere.cpp  collision_trimesh_trimesh.cpp  collision_util.cpp  collision_util.h  config.h  convex.cpp  heightfield.cpp  mass.cpp  ode.cpp  odeinit.cpp  odemath.cpp  osTerrain.cpp  quickstep.cpp  ray.cpp  rotation.cpp  sphere.cpp  step.cpp  util.cpp  (+1 more)
trunk/unmanaged/ODE-OpenSim-Test/ode/src/joints/: amotor.cpp  contact.cpp  dball.cpp  dhinge.cpp  hinge2.cpp  joint.cpp  piston.cpp  pu.cpp  slider.cpp  transmission.cpp  universal.cpp
trunk/unmanaged/ODE-OpenSim-Test/ou/: Makefile.am  configure.ac
(+3296 files in other folders)
